# airlab_msgs

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: dev.yaml  main.yaml  test.yaml
msg/: AIRLABModes.msg  CameraStream.msg  CameraStreamArray.msg  CommonAlert.msg  CommsGraph.msg  CommsLink.msg  ConvoyPosition.msg  ConvoyPositionArray.msg  DirectionalInput.msg  GlobalDescriptor.msg  GoalInput.msg  LoopInfoCompressed.msg  NavigateStairRequest.msg  NavigateStairResponse.msg  NeighborEstimate.msg  PathVelocity.msg  PointcloudCompressed.msg  RobotInfo.msg  RobotInfoArray.msg  StairElement.msg  StairStep.msg  StairsMessage.msg
